Fix some layout issues

--- a/naikan-client/src/assets/layout/styles/theme/naikan-light/theme.css
+++ b/naikan-client/src/assets/layout/styles/theme/naikan-light/theme.css
@@ -3648,6 +3648,11 @@ p-treeselect.p-treeselect-clearable .p-treeselect-clear-icon {
   padding: 1rem;
 }
 
+.p-column-filter-overlay-menu .p-column-filter-buttonbar .p-button {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 .fc {
   /* FullCalendar 4 */
   /* FullCalendar 5 */
@@ -4142,8 +4147,8 @@ p-treeselect.p-treeselect-clearable .p-treeselect-clear-icon {
   color: rgba(0, 0, 0, 0.87);
   border: solid #e4e4e4;
   border-width: 0;
-  padding: 0.5rem 1rem;
-  border-radius: 4px;
+  padding: 1.5rem 1rem;
+  border-radius: 0px;
 }
 
 .p-paginator .p-paginator-first,
@@ -6631,8 +6636,6 @@ p-treeselect.p-treeselect-clearable .p-treeselect-clear-icon {
   color: rgba(0, 0, 0, 0.6);
   padding: 1rem 1.5rem;
   font-weight: 500;
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
   transition: none;
   margin: 0 0 0 0;
 }
@@ -8694,7 +8697,7 @@ p-multiselect.ng-dirty.ng-invalid .p-multiselect:not(.p-disabled).p-focus {
 }
 
 .p-paginator {
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .p-paginator .p-paginator-element:focus {
